--- a/flight project/flight project.csproj
+++ b/flight project/flight project.csproj
@@ -90,6 +90,12 @@
     <Compile Include="updatecardinfo.Designer.cs">
       <DependentUpon>updatecardinfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Updateflightform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Updateflightform.Designer.cs">
+      <DependentUpon>Updateflightform.cs</DependentUpon>
+    </Compile>
     <Compile Include="updateinfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="updatecardinfo.resx">
       <DependentUpon>updatecardinfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Updateflightform.resx">
+      <DependentUpon>Updateflightform.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="updateinfo.resx">
       <DependentUpon>updateinfo.cs</DependentUpon>
