--- a/flight project/flight project.csproj
+++ b/flight project/flight project.csproj
@@ -87,6 +87,12 @@
     </Compile>
     <Compile Include="AdminModel.cs" />
     <Compile Include="Auth.cs" />
+    <Compile Include="cancelflight.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="cancelflight.Designer.cs">
+      <DependentUpon>cancelflight.cs</DependentUpon>
+    </Compile>
     <Compile Include="createcard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminForm.resx">
       <DependentUpon>AdminForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="cancelflight.resx">
+      <DependentUpon>cancelflight.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="createcard.resx">
       <DependentUpon>createcard.cs</DependentUpon>
